option (PROPRIETARY_GG "Use proprietary GlobalGrid distribution?" OFF)
add_executable(distauth GGDNS.cpp GlobalGrid.cpp)
if(PROPRIETARY_GG)
set (EXTRA_LIBS ${EXTRA_LIBS} GlobalGrid)
else(PROPRIETARY_GG)
add_subdirectory(GGSIM)
set (EXTRA_LIBS ${EXTRA_LIBS} GlobalGrid)
set (EXTRA_HEADERS ${EXTRA_HEADERS} "GGSIM")
endif(PROPRIETARY_GG)
include_directories(${EXTRA_HEADERS} "${PROJECT_BINARY_DIR}" ".")
target_link_libraries(distauth OAuth uuid ${EXTRA_LIBS})
